1999-08-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.97c

	* configure.in (ac_cv_make_ntptime):  Typo.
	From: Ulrich Windl <ulrich.windl@rz.uni-regensburg.de>

1999-08-26  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.97b

	* libntp/iosignal.c:
	* ntpd/ntp_peer.c:
	* ntpd/refclock_nmea.c:
	* ntpdate/ntptime_config.c:
	* ntpdate/ntptimeset.c:
	AIX, Irix, and SunOS lint cleanup
	From: Marc.Brett@westgeo.com

1999-08-24  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in 4.0.97a

	* configure.in (AC_OUTPUT): added scripts/Makefile
	* Makefile.am (SUBDIRS): Added scripts
	* scripts/Makefile.am: Added

1999-08-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_nmea.c: Patches for:
        Trimble OEM Ace-II receiver. Low cost PCB with single 
        voltage input, external active antenna and two serial 
        ports with either NMEA and ITAPs output. Programmable
        to be tuned for 'time' accuracy in fixed station config.
	From: Nick Hibma <nick.hibma@jrc.it>

1999-08-21  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_config.c: Added listen_to_virtual_ips support (-L flag)
	* ntpd/ntp_io.c: Ditto

1999-08-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_intres.c (request): Lint cleanup
	* ntpd/ntp_control.c (ctl_putclock): Ditto
	* libntp/recvbuff.c (getrecvbufs): Ditto
	(get_free_recv_buffer): Ditto
	* libntp/systime.c (adj_systime): Ditto

1999-08-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.97

	* libntp/systime.c:
	* ntpd/ntp_loopfilter.c:
	* ntpd/ntpd.c:
	* ports/winnt/libntp/nt_clockstuff.c:
	From: Sven Dietrich <Sven_Dietrich@trimble.com>
	
	* README.cvs: Updated.

	* configure.in: 
	* include/ntp_machine.h:
	* libntp/mexit.c:
	* ntpd/ntp_config.c:
	* ntpd/ntp_peer.c:
	* ntpd/ntp_restrict.c:
	* ntpd/refclock_arc.c:
	* ntpdate/ntpdate.c:
	Irix, SunOS, AIX, lint patches
	From: Marc.Brett@westgeo.com

	* util/ansi2knr.c: New release (fix for bug reported by Marc Brett)